ignore local profile

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/maven,intellij+iml
+
+application-local.properties
+LOCAL.md
