introduce the service layer and plug it on the controller

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8888
 security.mm-token=the-very-secured-value
 security.mm-token-bcrypted=$2y$12$U6DuGjXkL7oNPsfLw8KCpeXK2cT6qfMhNriHEHanrsG2yJx9PlmN2
+command.templates.path=/templates
