--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,5 @@ jobs:
         java-version: 11
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Codecov
+      uses: codecov/codecov-action@v1.2.1
