first try for environment command giving status and screenshot refactoring is coming

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,16 @@
 			<artifactId>gitlab4j-api</artifactId>
 			<version>${gitlab4j-api.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.141.59</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
