--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=8888
 #security.mm-token-bcrypted=
 command.templates.path=/templates
+slash.gitlab-host-url=https://gitlab.com
+slash.local-image-storage-path=classpath:/classes/templates
+slash.host=http://localhost:8888
+slash.web-image-path=/images
+slash.gecko-driver-path=./third-party-dependencies/geckodriver-v0.29.0-win64/geckodriver.exe
