--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,7 @@ security.mm-token-bcrypted=$2y$12$U6DuGjXkL7oNPsfLw8KCpeXK2cT6qfMhNriHEHanrsG2yJ
 command.templates.path=/templates
 slash.gitlab-host-url=https://gitlab.com
 slash.gitlab-personal-access-token=the-personnal-access-token
+slash.local-image-storage-path=classpath:/classes/templates
+slash.host=http://localhost:8888
+slash.web-image-path=/images
+slash.gecko-driver-path=./third-party-dependencies/geckodriver-v0.29.0-win64/geckodriver.exe
